fix line breaks in games panel

--- a/src/styles/components/gameSidebar.scss
+++ b/src/styles/components/gameSidebar.scss
@@ -202,6 +202,7 @@ $sidebar-width: 500px;
       p {
         opacity: 0.6;
         margin-top: 0;
+        white-space: pre-line;
       }
       h3 {
         font-family: $displayHeavy;
